kustomize/overlays/us-east-cluster/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: 45.77.200.202.nip.io # Replace with your DNS name or IP if required
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foobar-api
                port:
                  number: 80
  tls:
    - secretName: foobar-api-cert
      hosts:
        - 45.77.200.202.nip.io # Replace with a temporary DNS name or IP if needed
