kustomize/overlays/us-east-cluster/ingress-us-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: newyork-cluster.45.77.154.12.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foobar-api
                port:
                  number: 80
