kustomize/overlays/us-east-cluster/ingressroute-us.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: foobar-api-tcp
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`newyork-cluster.45.77.154.12.nip.io`)
      services:
        - name: foobar-api
          port: 80
  tls:
    passthrough: true
